                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 03-03-2005 fixed: music overlay sometimes shows no default thumb, eg. when starting a http stream with python
  - 03-03-2005 changed: GUIButtonControl and GUIToggleButtonControl send their click message before executing a action or a hyperlink
  - 02-03-2005 fixed: screensaver preview sometimes crashes
  - 02-03-2005 fixed: screensaver preview button is enabled when screensaver is off
  - 02-03-2005 changed: folders and files from smb will be sorted by modification date now
  - 02-03-2005 added: Screensavers from the competition.
  - 02-03-2005 changed: Rendering of CGUIImage -> big boost in gui framerate (most noticeable in 1080i)
  - 02-03-2005 fixed: [ 1155038 ] "Video calibration" error
  - 02-03-2005 changed: moved cdda reading to CFileCdda class
  - 02-03-2005 fixed: cdda player, couldn't seek to the start of a track
  - 02-03-2005 fixed: cdda player, gui was choppy when seeking
  - 02-03-2005 added: new infofadelabel control.  Works like infolabel, except you can have multiple <info> tags.  See the PM MusicOverlay.xml files for an example.
  - 02-03-2005 updated: German language file (Thnx to klapperx)
  - 02-03-2005 updated: Norwegian language file (Thnx to vnm)
  - 02-03-2005 updated: Italian language file (Thnx to kotix)
  - 02-03-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 02-03-2005 updated: Finnish language file (Thnx to jutski)
  - 02-03-2004 updated: Polish language file (Thnx to napek)
  - 02-03-2004 updated: Dutch language file (Thnx to tijmengozer)
  - 01-03-2005 added: Screensaver screenshot ability.