@@ -1259,10 +1259,10 @@ void CGUIWindowSettingsCategory::FillInSubtitleHeights(CSetting *pSetting)
 			CHDDirectory directory;	
 			VECFILEITEMS items;
 			CStdString strPath = "Q:\\system\\players\\mplayer\\font\\";
-	    if(g_guiSettings.GetBool("MyVideos.AlternateMPlayer"))
+/*	    if(g_guiSettings.GetBool("MyVideos.AlternateMPlayer"))
       {
         strPath = "Q:\\mplayer\\font\\";
-      }
+      }*/
 			strPath+=g_guiSettings.GetString("Subtitles.Font");
 			strPath+="\\";
 			directory.GetDirectory(strPath,items);
@@ -1300,10 +1300,10 @@ void CGUIWindowSettingsCategory::FillInSubtitleFonts(CSetting *pSetting)
 		CHDDirectory directory;	
 		VECFILEITEMS items;
 		CStdString strPath = "Q:\\system\\players\\mplayer\\font\\";
-	  if(g_guiSettings.GetBool("MyVideos.AlternateMPlayer"))
+/*	  if(g_guiSettings.GetBool("MyVideos.AlternateMPlayer"))
     {
       strPath = "Q:\\mplayer\\font\\";
-    }
+    }*/
 		directory.GetDirectory(strPath,items);
 		for (int i=0; i < (int)items.size(); ++i)
 		{
