@@ -37,14 +37,14 @@ DWORD WINAPI GetMPlayerVersionW( LPVOID lpParam )
 	const char* (__cdecl* pMplayerGetCompileDate)();
 	wszVersion[0] = 0; wszCompileDate[0] = 0;
 	DllLoader* mplayerDll;
-	if(!g_guiSettings.GetBool("MyVideos.AlternateMPlayer"))
-  {
+//	if(!g_guiSettings.GetBool("MyVideos.AlternateMPlayer"))
+//  {
     mplayerDll = new DllLoader("Q:\\system\\players\\mplayer\\mplayer.dll",true);
-  }
+/*  }
   else
   {
     mplayerDll = new DllLoader("Q:\\mplayer\\mplayer.dll",true);
-  }
+  }*/
 
 	if( mplayerDll->Parse() )
 	{		
