@@ -1722,10 +1722,10 @@ void CUtil::PrepareSubtitleFonts()
   if (g_guiSettings.GetInt("Subtitles.Height")==0) return;
 
   CStdString strPath,strHomePath,strSearchMask;
-  if(!g_guiSettings.GetBool("MyVideos.AlternateMPlayer"))
+//  if(!g_guiSettings.GetBool("MyVideos.AlternateMPlayer"))
     strHomePath = "Q:\\system\\players";
-  else
-    strHomePath = "Q:";
+//  else
+//    strHomePath = "Q:";
 
   strPath.Format("%s\\mplayer\\font\\%s\\%i\\",
           strHomePath.c_str(),
