@@ -583,14 +583,14 @@ bool CMPlayer::load()
 	Unload();
 	if (!m_pDLL)
 	{
-		if(!g_guiSettings.GetBool("MyVideos.AlternateMPlayer"))
-    {
+//		if(!g_guiSettings.GetBool("MyVideos.AlternateMPlayer"))
+//    {
       m_pDLL = new DllLoader("Q:\\system\\players\\mplayer\\mplayer.dll",true);
-    }
+/*    }
     else
     {
       m_pDLL = new DllLoader("Q:\\mplayer\\mplayer.dll",true);
-    }
+    }*/
 
 		if( !m_pDLL->Parse() )
 		{
